Fixing spacing issues

--- a/_sass/4-pages/_contact.sass
+++ b/_sass/4-pages/_contact.sass
@@ -3,6 +3,7 @@
   width: 300px
   font-family: $base-font
   text-align: center
+  background: #000
 
   h1
     font-family: $base-font
@@ -42,9 +43,6 @@
 
 +media($mobile)
 
-  #contact-page
-    padding-bottom: 100px
-
   #contact-container
     margin: 0 auto
     width: 90%
@@ -56,5 +54,6 @@
       width: 90%
 
     form
-      width: 90%
+      width: 92%
       margin: 0 auto
+      float: left
