--- a/_sass/4-pages/_pictures.sass
+++ b/_sass/4-pages/_pictures.sass
@@ -1,5 +1,25 @@
 
 
+
+
++media($tablet)
+
+  #pictures-wrapper
+    margin: -20px 0 0 0
+    padding-top: 80px
+
+    a
+      width: 33%
+      margin: 0 -5% 0 3%
+
+    img
+      width: 100%
+      height: auto
+      margin: -4px 0 0 0
+
+    h1
+      margin: 0 3% 35px
+
 #pictures-wrapper
   +outer-container
   max-width: 600px
@@ -27,17 +47,3 @@
     color: white
     text-align: center
     line-height: 1
-
-+media($tablet)
-
-  #pictures-wrapper
-    margin: -20px auto
-    padding-top: 80px
-
-    img
-      width: 100%
-      height: auto
-      margin: -4px 0 0 0
-
-    h1
-      margin: 0 3% 35px
